kanc/src/tests/sample_code/should_fail/single_file/parse/check/question_output.k
type Unit {
    u: Unit,
}

let foo = check (Unit.u: U) {
    ?
};
